<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="180dp"
        android:layout_height="127dp"
        android:layout_gravity="right"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/newName_editText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="clip_horizontal|center|left"
        android:hint="@string/name_editText"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/newPassword_editText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center|left"
        android:hint="@string/password_editText"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/newEmail_editText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center|left"
        android:hint="@string/email_editText"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/newAge_editText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center|left"
        android:hint="@string/birthday_editText"
        android:inputType="date"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/newPhoneNumber_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/phoneNumber_editText"
        android:inputType="phone"
        android:textSize="20sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/select_photo_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/newPhoto_textView"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/camera_imageButton"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:background="@color/ppal_green"
            android:translationX="0dp"
            app:srcCompat="@android:drawable/ic_menu_camera"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/submitToDB_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="100sp"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="100sp"
        android:backgroundTint="#8AC340"
        android:text="@string/newAccount_textView" />
</LinearLayout>