<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="match_parent"
        android:layout_height="269dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:layout_marginBottom="30sp"
        android:hint="@string/email_textView"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:layout_marginBottom="30sp"
        android:ems="10"
        android:hint="@string/password_textView"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100sp"
        android:layout_marginEnd="100sp"
        android:backgroundTint="#8AC340"
        android:text="@string/login_textView" />

    <Button
        android:id="@+id/newAccount_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:stateListAnimator="@null"
        android:text="@string/newAccount_textView"
        android:textColor="#2A8E2E" />
</LinearLayout>